Create import paths for typescript and used everywhere.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@services/*": ["./src/app/services/*"],
+      "@constants/*": ["./src/app/constants/*"],
+      "@components/*": ["./src/app/components/*"],
+      "@models/*": ["./src/app/models/*"],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
