1. Added directive path 2. Removed all hardCoded headers. 3. Step header and step error moved to directive.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@constants/*": ["./src/app/constants/*"],
       "@components/*": ["./src/app/components/*"],
       "@models/*": ["./src/app/models/*"],
+      "@directives/*": ["./src/app/directives/*"],
     }
   },
   "angularCompilerOptions": {
